<?xml version="1.0" encoding="utf-8"?><resources>
    <!-- Home and Event Detail -->    <string name="app_name">Carnnecting</string>    <string name="action_settings">Settings</string>    <string name="welcome">Welcome to Carnnecting!</string>        <string name="RSVP_button_text">RSVP</string>    <string name="TO"> TO </string>    <string name="title_activity_create_event">Create an Event</string>        <string name="app_id">333361920100865</string>
    
    <string name="title_activity_home">News Feed</string>
    <string name="title_activity_event_detail">Event Detail</string>
    <string name="title_activity_category_menu">Category Menu</string>
    <string name="title_activity_category_detail">Category Detail</string>
    <string name="title_activity_my_events">My Events</string>
    <string name="title_activity_favorite">Favorite</string>    <string name="title_activity_create_event">Create an Event</string>        <!-- For floating icons -->    <string name="f1">CreateEvent</string>    <string name="f2">Favorites</string>        <!-- Create Event -->      <string name="category">Category</string>    <string name="title">Title</string>    <string name="Edate">Date</string>    <string name="selEdate">Choose Event Date</string>    <string name="Stime">Start Time</string>    <string name="Etime">End Time</string>    <string name="selStime">Choose Event Start Time</string>    <string name="selEtime">Choose Event End Time</string>    <string name="loc">Location</string>    <string name="addr">Address</string>    <string name="getAd">Get Current Location</string>    <string name="or">Or enter the address of event place</string>    <string name="editAd">Street, City, State</string>    <string name="host">Host</string>    <string name="org">Organization Name</string>    <string name="des">Description</string>    <string name="pic">Photos</string>    <string name="upload">Create Event</string>        <string name="camera">Camera</string>    <string name="album">Photo Album</string>    

    <!-- Action Bar -->    <string name="categories">Categories</string>    <string name="my_events">My Events</string>    <string name="news_feed">News Feed</string>    <string name="settings">Settings</string>    <string name="logout">Logout</string>    <string name="favorites">Favorite</string>    <string name="create_event">Create an Event</string>        <!-- For floating icons -->    <string name="f1">CreateEvent</string>    <string name="f2">Favorites</string>        <!-- Facebook  -->
    <string name="share">Share this event on Facebook</string>    <!-- share item -->    <string name="ask">Do you want to Share this event on Facebook?</string>    <string name="yes">Yes</string>    <string name="no">No</string>        <!--  Event Detail -->    <string name="when">When:</string>    <string name="where">Where:</string>    <string name="host">Host:</string>    <string name="description">Description:</string>    </resources>
