<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/categories"
          android:title="@string/categories"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/my_events"
          android:title="@string/my_events"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/news_feed"
          android:title="@string/news_feed"
          android:icon="@drawable/icon_home"
          android:showAsAction="always" />
    
    <item android:id="@+id/favorites"
          android:title="@string/favorites"
          android:icon="@drawable/icon_fvrite"
          android:showAsAction="always" />
    
    <item android:id="@+id/create_event"
          android:title="@string/create_event"
          android:icon="@drawable/add_event"
          android:showAsAction="always" />
    
    
    <item android:id="@+id/logout"
          android:title="@string/logout"
          android:showAsAction="ifRoom|withText" />

</menu>