<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/imagescroll"
 android:layout_height="fill_parent"
 android:layout_width="fill_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
         <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />
	<EditText
          android:id="@+id/editText1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/title"
          android:ems="10" />
	
	      <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host" />
	<EditText
          android:id="@+id/editText2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/org"
          android:ems="10" />
	
      <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime" />
      <EditText
          android:id="@+id/editText3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/date"
          android:inputType="date" >
          <requestFocus />
      </EditText>
      <EditText
          android:id="@+id/editText6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/time"
          android:inputType="time" />
      
      <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc" />
      <EditText
          android:id="@+id/editText4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/addr"
          android:inputType="textPostalAddress" />
    
       <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des" />
       <EditText
           android:id="@+id/editText5"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
           android:hint="@string/des"
           android:inputType="textMultiLine" />
           
              <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic" />
    <RelativeLayout   
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

          <Button
              android:id="@+id/getPhotos"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/takePhotos"
              android:layout_alignBottom="@+id/takePhotos"
              android:layout_alignParentRight="true"
              android:layout_marginRight="36dp"
              android:text="@string/album" />

          <Button
              android:id="@+id/takePhotos"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:layout_marginRight="35dp"
              android:layout_toLeftOf="@+id/getPhotos"
              android:text="@string/camera" />

      </RelativeLayout>
      <ImageView
	    android:id="@+id/imgView"
	    android:src="@drawable/ic_launcher"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"  />
      
      <CheckBox
          android:id="@+id/checkBox1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share" />
      
     <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload" />
</LinearLayout>
</ScrollView>