<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<ScrollView 
    android:layout_width="fill_parent" 
    android:layout_height="0dip"
    android:layout_weight="0.5"> 
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	<LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    
 
       <CheckBox android:id="@+id/eventDetailFavoriteCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:button="@android:drawable/btn_star"/>
    

    <TextView
        android:id="@+id/eventDetailSubjectTextView"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="30.5sp" />
    
    
    <com.carnnecting.widget.NotPressedWithParentCheckBox android:id="@+id/eventDetailRSVPCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:button="@drawable/btn_check" />
    
    </LinearLayout>
   
    <TextView
        android:id="@+id/eventDetailWhen"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="25sp"
        android:text="@string/when"/>"
        
    <TextView
        android:id="@+id/eventDetailEventTimeTextView"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="25sp" />
	
    <TextView
        android:id="@+id/eventDetailWhere"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="25sp"
        android:text="@string/where"/>
    
	<TextView
        android:id="@+id/eventDetailLocationTextView"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="25sp" />
	
	<TextView
        android:id="@+id/eventDetailHost"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="25sp"
        android:text="@string/host"/>
	
	<TextView
        android:id="@+id/eventDetailHostTextView"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="25sp" />
	  
	<TextView
        android:id="@+id/eventDetailDescription"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="25sp"
        android:text="@string/description"/>
	   
    <TextView
        android:id="@+id/eventDetailDescriptionTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="25sp" />
    

    <ImageView	android:id="@+id/eventImageView"       
        	android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
	    android:id="@+id/shareButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textStyle="bold"
	    android:gravity="center"
	    android:text="@string/share"/>
        
</LinearLayout>
</ScrollView>
    
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5"
        class="com.google.android.gms.maps.MapFragment" />
    
</LinearLayout>